# nvidia-video-search-and-summarization

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-3rd-party.txt  README.md  combined.yaml  generate_template.sh  release_metadata.yaml
services/analytics/behavior-analytics/: .gitattributes  .gitignore  3rdParty_Licenses.md  AGENTS.md  CLAUDE.md  Pipfile  README.md  pyproject.toml  pyrightconfig.json  setup.py
services/analytics/behavior-analytics/apps/analytics/: main_analytics_2d_app.py  main_analytics_3d_app.py
services/analytics/behavior-analytics/apps/dev_example/: main_dev_example_app.py
services/analytics/behavior-analytics/apps/fusion_search/: main_fusion_search_analytics_app.py
services/analytics/behavior-analytics/apps/playback/: playback_amr.py  playback_embed.py  playback_frames.py  playback_json.py  playback_original_frames.py  playback_rtls.py  playback_sorted_frames.py
services/analytics/behavior-analytics/apps/public_safety/: main_public_safety_app.py
services/analytics/behavior-analytics/apps/robot_speed_control/: main_robot_speed_control_app.py
services/analytics/behavior-analytics/apps/rpm/: main_rpm_app.py
services/analytics/behavior-analytics/apps/smart_city/: main_smart_city_app.py
services/analytics/behavior-analytics/configs/: .gitignore  asset_surf_warehouse.json  building_k_calibration.json  calibration_2d_i.json  calibration_3d.json  calibration_cafeteria_2d.json  calibration_lab148_v0.2a.json  calibration_smart_city_v0.3.json  calibration_smart_city_v3.0.json  calibration_space_utilization.json  dev_example_config.json  frame_playback_config.json  fusion_search_analytics_config.json  lab148_config.json  logging_config.json  public_safety_config.json  rpm_calibration.json  rpm_config.json  rtls_amr_playback_config.json  smart_city_config.json  smart_city_config_image.json  smart_city_config_mqtt.json  smart_city_config_redis.json  space_utilization_config_sample.json  usd_search_config_sample.json  warehouse_2d_config.json  warehouse_2d_config_i.json  warehouse_3d_config.json
services/analytics/behavior-analytics/configs/sample_data/: bev_frames_sample_data.txt  sample_data_on_demand_Camera_0002.txt  social_distancing_sample_data.txt
services/analytics/behavior-analytics/docker/: Dockerfile  Dockerfile.dockerignore  deps.json
services/analytics/behavior-analytics/docs/: building-mdx-analytics-app.md  configuration.md  docker.md  dynamic-config.md  incident-detection.md  installation-and-usage.md  modules-overview.md  troubleshooting.md
services/analytics/behavior-analytics/readmes/: building-mdx-analytics-app.md  cursor-dev-example-walkthrough.md  dynamic-calibration.md  installation-and-usage.md  modules-overview.md  testing.md  troubleshooting.md
services/analytics/behavior-analytics/tests/dev/: batch_smart_city_app.py  batch_warehouse_3d_app.py
services/analytics/behavior-analytics/tests/dev/notebooks/: SmartCity_app_test.ipynb  osm_road_network_test.ipynb
services/analytics/behavior-analytics/tests/integration/: cleanup.sh  dev.sh  generate_env.sh  test.sh  test_all.sh
services/analytics/behavior-analytics/tests/integration/docker_compose/: cleanup_all_datalog.sh
services/analytics/behavior-analytics/tests/integration/dynamic_calibration/: README.md  dynamic_calibration_e2e.py
services/analytics/behavior-analytics/tests/integration/dynamic_config/: README.md  dynamic_config_e2e.py
services/analytics/behavior-analytics/tests/unit/resources/: calibration_building_k.json  line_segment_v0.3.json  network_v0.3.json  network_v3.0.json  smart_city_config_test.json  test_config.json
services/video-summarization/: CLAUDE.md  LICENSE  LICENSE.3rdparty  README.md  VERSION  pyproject.toml  start_via.sh
services/video-summarization/api_spec/: openapi.json
services/video-summarization/config/: config.yaml
services/video-summarization/docker/: Dockerfile  Makefile  copy_configs.sh  copy_sources.sh  package_file_list.txt  start_docker.sh  stop_docker.sh
services/video-summarization/docker/base/: Dockerfile  Makefile  requirements_apt.txt  user_additional_install.sh
services/video-summarization/docker/base/py_deps/: .gitignore  pyproject.toml
services/video-summarization/docker/deploy/: compose.yaml
services/video-summarization/docker/logstash/: README.md  logstash-compose.yml
services/video-summarization/docker/logstash/config/: logstash.yml
services/video-summarization/docker/logstash/pb_definitions/: .gitkeep  nv_pb.rb
services/video-summarization/docker/logstash/pipeline/: visionllm.conf
services/video-summarization/src/: chunk_info.py  kafka_producer.py  lvs_errors.py  lvs_mcp.py  otel_helper.py  rag_adapter.py  rtvi_vlm_client.py  via_client_cli.py  via_exception.py  via_logger.py  via_server.py  via_stream_handler.py  via_utils.py  vss_api_models.py
services/video-summarization/src/cpp/nvdec_get_count/: Makefile  cuviddec.h  nvdec_get_count.c
services/video-summarization/src/protos/: nv.proto  nv_pb2.py
services/video-summarization/src/vlm_pipeline/: __init__.py  vlm_types.py
services/vios/mcp/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  start_mcp.sh
services/vios/mcp/src/: __init__.py  __main__.py  config.py  cpp_client.py  server.py
services/vios/test/bdd_tests/: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  config.json  conftest.py  docker-entrypoint.sh  pyproject.toml  setup.sh
services/vios/test/bdd_tests/.cursor/rules/: vst_bdd_project.mdc
services/vios/test/bdd_tests/features/: __init__.py
services/vios/test/bdd_tests/features/file_download/: download_codecs_and_overlays.feature  download_contracts.feature  download_full_file.feature  download_inter_file_gap.feature  download_recent_video.feature  download_stability.feature  download_video.feature  video_download_by_blocking_url.feature  (+1 more)
services/vios/test/bdd_tests/scripts/: __init__.py  container_monitor.py  cpu_mem_stats.py  nvenc_capacity.py  nvml_monitor.py  run_unit_tests.sh  setup_deps.py  test_result_publisher.py
services/vios/test/bdd_tests/tests/: __init__.py  test_utils.py
(+1850 files in other folders)
