# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "mcp-gateway"
version = "0.1.0"
description = "MCP server gateway for connecting to C++ applications via REST API"
license = "Apache-2.0"
authors = [
    {name = "Prakhar Shukla", email = "prakhars@nvidia.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.23.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "uvloop>=0.21.0",
    "uvicorn>=0.35.0,<0.36.0",
    "starlette>=0.49.1",
    "pydantic-settings>=2.7.1",
    "python-multipart (==0.0.22)",
]

[project.scripts]
mcp-gateway = "src.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.20.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.5",
]

[tool.poetry]
packages = [{include = "src"}]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
