# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "lvs"
version = "3.2.0rc1"
requires-python = ">=3.10"
dependencies = [
    "pillow==12.2.0",
    "iopath==0.1.10",
    "portalocker==3.2.0",
    "sseclient-py==1.9.0",
    "requests==2.33.1",
    "tabulate==0.10.0",
    "tqdm==4.67.3",
    "pyyaml==6.0.3",
    "kafka-python==2.2.15",
    "prometheus-client==0.25.0",
    "opencv-python-headless==4.13.0.92",
    # CVE in urllib3 2.6.3 — pin direct dep to 2.7.0 (transitive via requests).
    "urllib3==2.7.0",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
